Refactor project structure: enhance README, implement database management, and improve Streamlit and MCP server integration

--- a/Agent_Analista_de_excel/requirements.txt
+++ b/Agent_Analista_de_excel/requirements.txt
@@ -1,10 +1,9 @@
-crewai-tools[mcp]
-crewai
-fastmcp
-mcpadapt
-python-dotenv
-setuptools
-streamlit
-langchain-openai
-mcp[cli]
-nest-asyncio
+streamlit>=1.32.0
+crewai>=0.11.0
+crewai-tools>=0.0.7
+fastmcp>=0.1.0
+langchain-openai>=0.0.5
+pandas>=2.2.0
+python-dotenv>=1.0.0
+openai>=1.12.0
+nest-asyncio>=1.6.0
